# avokati-backend

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DATABASE_STRUCTURE_FROM_FRONTEND.md  Dockerfile  MIGRATION_NOTES.md  Makefile  README.md  README_AI_RETRIEVAL.md  README_DOCUMENT_PROCESSOR.md  cloudbuild.yaml  main.py  mermaiddiagram.txt  model.py  models.txt  pyproject.toml  pytest.ini  render.yaml  requirements-local.txt  requirements.txt  setup_poetry.sh
app/ai/: __init__.py  abolishment.py  bm25_rescore.py  citation.py  citation_validator.py  clarifier.py  conversation.py  gemini_extract.py  law_catalog.py  llm.py  ocr.py  pipeline.py  reranker.py  router.py  router_llm.py  text_norm.py  v2_adapter.py  v2_chunker.py
app/ai/data/: abolishment_relations.json  law_catalog.json
app/ai/embedding/: __init__.py  providers.py
app/ai/prompts/: legal_qa_sq.py  template_extract.py
app/ai/retrieval/: __init__.py  document_scraper.py  langchain_service.py  vector_store.py
app/api/api_v1/: api.py
app/core/: auth.py  celery.py  config.py  consent.py  constants.py  database.py  document_processor.py  gcs.py  s3.py  security.py  storage.py  supabase.py  tenancy.py
app/crud/: case.py  chat.py  client.py  document.py  legal_document.py  user.py
app/db/: base.py
app/db/migrations/: add_parent_document_id.sql  add_s3_fields_to_legal_document.sql  create_legal_document_table.py  create_legal_document_table.sql  fix_document_metadata_column.sql  update_legal_document_table.sql
app/db/models/: __init__.py  audit.py  case.py  case_milestone.py  chat_session.py  client.py  consent.py  document.py  document_collaborator.py  document_version.py  event.py  invoice.py  legal_document.py  library_document.py  template.py  user.py
app/models/: legal_document.py  user.py
app/schemas/: __init__.py  audit.py  auth.py  avokai.py  base.py  case.py  case_milestone.py  chat.py  client.py  consent.py  document.py  event.py  invoice.py  legal_document.py  library.py  office.py  template.py  user.py
app/scripts/: document_processor.py  text_extraction.py
app/services/: legal_document_service.py
app/utils/: document_parsing.py  language_detection.py  logging.py  seed_documents.py  text_processing.py
reference/: README.md  requirements-render.txt  requirements.txt
scripts/: audit_garbled_chunks.py  build_v2_index.py  import_legal_documents.py  migrate_s3_to_gcs.py  ocr_reextract_batch.py  reingest_law.py
supabase/migrations/: 20260512_chat_sessions.sql  20260517_frontend_functional_schema.sql  20260518_case_milestones_event_type.sql  20260518_drop_legacy_rls_dependencies.sql  20260520_auth_user_autoprovision.sql  20260601_library_documents.sql  20260601_office_rls.sql  20260601_office_tenancy.sql  20260601_office_tenancy_tighten.sql  20260601_templates.sql  20260603_ai_consent.sql  20260621_chat_rls.sql
tests/: conftest.py
tests/api/: test_auth.py
tests/eval/: audit_index.py  demo_llm_pipeline.py  generate_golden_set.py  golden_queries.json  golden_queries_civil_cases.json  golden_queries_constitutional.json  golden_queries_reasoning.json  pending_professor_queries.json  run_eval.py  run_eval_abstention.py  run_eval_hybrid.py  run_eval_pipeline.py  run_eval_reasoning.py  run_eval_router_llm.py  test_citation_completion.py  test_citation_parser.py  test_clarifier.py  test_phase23_modules.py  test_pipeline.py  test_router_llm.py
tests/eval/results/: audit_20260506_232216.json  (+21 more)
(+15 files in other folders)
