[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the Law Office application"
authors = ["Drinor Berisha <drinorb66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0"

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
python-multipart = "^0.0.5"
PyJWT = "^2.8.0"
httpx = ">=0.23.0,<0.24.0"
supabase = "1.0.3"
gotrue = "1.2.0"
realtime = "1.0.0"
postgrest = "^0.10.0"
storage3 = ">=0.5.2,<0.6.0"
websockets = "10.4"
aioboto3 = "^14.1.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-pinecone = "^0.2.0"
langchain-text-splitters = "^0.3.0"
openai = "^1.1.0"
pinecone = "^5.0.0"
faiss-cpu = "^1.7.0"
langdetect = "^1.0.9"
aiofiles = "^23.1.0"
alembic = "^1.10.0"
email-validator = "^2.0.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
celery = "^5.3.0"
redis = "^4.5.0"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
